--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 spring:
   # 数据库配置
   datasource:
-    url: jdbc:mysql://120.77.173.98:3306/xmu8102
+    url: jdbc:mysql://120.77.173.98:3306/xmu8102?characterEncoding=utf8
     username: xmu8102
     password: aed11cd7
     driver-class-name: com.mysql.jdbc.Driver
@@ -15,5 +15,5 @@ mybatis:
   type-aliases-package: xmu.crms.entity
   configuration:
     map-underscore-to-camel-case: true
-
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
